Hopefully fixed the bug with table gaps

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -33,9 +33,10 @@ td.radnici ul {
     margin: 0;
     padding-left: 5px;
     min-width: 50px;
+    max-width: 70px;
     min-height: 20px;
     z-index: 2;
-    height: 100%;
+    /* height: 100%; */
 }
 
 .radnici tr {
